Fix coverage